...
        floatingActionButton = {
            MultiFloatingActionButton(
                items = listOf(
                    MultiFabItem(
                        id = 1,
                        iconRes = R.drawable.ic_pencil,
                        label = "Enter Manually"
                    ),
                    MultiFabItem(
                        id = 2,
                        iconRes = R.drawable.ic_camera,
                        label = "Scan Barcode"
                    ),
                ),
                fabIcon = FabIcon(iconRes = R.drawable.ic_baseline_add_24, iconRotate = 45f),
                onFabItemClicked = {
                    Toast.makeText(contextForToast, it.label, Toast.LENGTH_LONG).show()
                    if (it.label == "Enter Manually") {
...
            },
            backgroundColor = fabOption.backgroundTint,
            contentColor = fabOption.iconTint
        ) {
            Icon(
                painter = painterResource(id = fabIcon.iconRes),
                contentDescription = "FAB",
                modifier = Modifier.rotate(rotation),
                tint = fabOption.iconTint
            )
        }
    }
}
...
        verticalArrangement = Arrangement.Center,
    ) {

        // on below line we are adding a text for heading.
        Text(
            // on below line we are specifying text
            text = "Internal Storage in Android",
            // on below line we are specifying text color,
            // font size and font weight
            color = Color.Black,
            textAlign = TextAlign.Center,
            fontSize = 20.sp,
            fontWeight = FontWeight.Bold
...
            // text as "Enter your email"
            placeholder = { Text(text = "Enter your message") },
            // on below line we are adding modifier to it
            // and adding padding to it and filling max width
            modifier = Modifier
                .padding(16.dp)
                .fillMaxWidth().testTag("wordField"),
            // on below line we are adding text style
            // specifying color and font size to it.
            textStyle = TextStyle(color = Color.Black, fontSize = 15.sp),
            // on below line we ar adding single line to it.
            singleLine = true,
        )
...
            // on below line adding a modifier for our button.
            modifier = Modifier
                .padding(5.dp)
                .fillMaxWidth()
        ) {
            // on below line adding a text for our button.
            Text(text = "Write Data to Internal Storage", textAlign = TextAlign.Center)
        }
        // on below line adding a spacer
        Spacer(modifier = Modifier.width(10.dp))

        // on below line adding a text view to display our data.
        Text(
...
            // modifier for our button.
            modifier = Modifier
                .padding(5.dp)
                .fillMaxWidth()
        ) {
            // on below line adding a text for our button.
            Text(text = "Read Data from Internal Storage", textAlign = TextAlign.Center)
        }
    }
}


private fun prepareBottomMenu(): List<BottomMenuItem> {
...
